--- a/sample_app/app/assets/stylesheets/custom.scss
+++ b/sample_app/app/assets/stylesheets/custom.scss
@@ -202,3 +202,14 @@ input, textarea {
 .dropdown-menu.active {
     display: block;
 }
+
+/* Users index */
+.users {
+    list-style: none;
+    margin: 0;
+    li {
+        overflow: auto;
+        padding: 10px 0;
+        border-top: 1px solid $gray-lighter;
+    }
+}
