--- a/sample_app/app/views/shared/_micropost_form.html.erb
+++ b/sample_app/app/views/shared/_micropost_form.html.erb
@@ -4,4 +4,7 @@
         <%= f.text_area :content, placeholder: "Compose new micropost..." %>
     </div>
     <%= f.submit "Post", class: "btn btn-primary" %>
+    <span class="image">
+        <%= f.file_field :image, accept: "image/jpeg,image/gif,image/png" %>
+    </span>
 <% end %>
