--- a/sample_app/app/assets/stylesheets/custom.scss
+++ b/sample_app/app/assets/stylesheets/custom.scss
@@ -160,6 +160,40 @@ aside {
     margin-top: 15px;
 }
 
+.stats {
+    overflow: auto;
+    margin-top: 0;
+    padding: 0;
+    a {
+        float: left;
+        padding: 0 10px;
+        border-left: 1px solid $gray-lighter;
+        color: $gray;
+        &:first-child {
+            padding-left: 0;
+            border: 0;
+        }
+        &:hover {
+            text-decoration: none;
+            color: blue;
+        }
+    }
+    strong {
+        display: block;
+    }
+}
+
+.user_avaters {
+    overflow: auto;
+    margin-top: 10px;
+    .gravatar {
+        margin: 1px;
+    }
+    a {
+        padding: 0;
+    }
+}
+
 /* forms */
 
 input, textarea {
